start working on deferring tag prefix registration