@@ -263,7 +263,7 @@ public class ChemicalHelper {
     public static Item getItem(MaterialEntry materialEntry) {
         List<ItemLike> items = getItems(materialEntry);
         if (items.isEmpty()) return Items.AIR;
-        return items.get(0).asItem();
+        return items.getFirst().asItem();
     }
 
     public static Item getItem(TagPrefix tagPrefix, Material material) {
@@ -283,6 +283,14 @@ public class ChemicalHelper {
     }
 
     public static ItemStack get(TagPrefix tagPrefix, Material material) {
+        return get(tagPrefix, material, 1);
+    }
+
+    public static ItemStack get(Holder<TagPrefix> tagPrefix, Material material, int stackSize) {
+        return get(new MaterialEntry(tagPrefix, material), stackSize);
+    }
+
+    public static ItemStack get(Holder<TagPrefix> tagPrefix, Material material) {
         return get(tagPrefix, material, 1);
     }
 
@@ -318,6 +326,11 @@ public class ChemicalHelper {
     }
 
     @Nullable
+    public static Block getBlock(Holder<TagPrefix> orePrefix, Material material) {
+        return getBlock(new MaterialEntry(orePrefix.value(), material));
+    }
+
+    @Nullable
     public static TagKey<Block> getBlockTag(TagPrefix orePrefix, Material material) {
         var tags = orePrefix.getBlockTags(material);
         if (!tags.isEmpty()) {
@@ -340,7 +353,12 @@ public class ChemicalHelper {
                 "No item tag for %s %s".formatted(orePrefix, material));
     }
 
-    public static List<TagKey<Item>> getTags(TagPrefix orePrefix, @NotNull Material material) {
+    @Nullable
+    public static TagKey<Item> getTag(Holder<TagPrefix> orePrefix, Material material) {
+        return getTag(orePrefix.value(), material);
+    }
+
+    public static List<TagKey<Item>> getTags(TagPrefix orePrefix, Material material) {
         return orePrefix.getItemTags(material);
     }
 
